--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://crrkit01.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: crrkit01 Blog
+subtitle: Blogging as I learn
+author: crrkit01
 simple_search: https://www.google.com/search
 description:
 
